--- a/doc/util/hx-front.sty
+++ b/doc/util/hx-front.sty
@@ -15,7 +15,7 @@
 \renewcommand*{\maketitle}{
 	\begin{titlepage}
 		\centering
-		{\includegraphics[width=4cm]{../../util/unipd_logo}\par}
+		{\includegraphics[width=10cm]{../../util/hivex_logo.png}\par}
 		\vspace{1cm}
 		{\scshape\LARGE Gruppo \hx \par}
 		\vspace{1cm}
