Modificata hx-macro

--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -7,7 +7,7 @@
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
 \newcommand{\email}{\href{mailto:hivex.team@gmail.com}{hivex.team@gmail.com}}
 \newcommand{\scopo}{
-Lo scopo del prodotto è quello di implementare un \gloss{editor UML} che consenta, a partire dai diagrammi realizzati dall'utente, di generare il codice dell'applicazione da esso descritta, appartenente ad uno specifico dominio applicativo: i giochi da tavolo.
+Lo scopo del prodotto è quello di implementare un \gloss{editor} \gloss{UML} che consenta, a partire dai diagrammi realizzati dall'utente, di generare il codice dell'applicazione da esso descritta, appartenente ad uno specifico dominio applicativo: i giochi da tavolo.
 
 Il sistema offrirà le seguenti funzionalità:
 \begin{itemize}
@@ -21,7 +21,7 @@ L'editor dovrà infine essere fruibile dall'utente attraverso un \gloss{browser}
 \newcommand{\presgloss}{
 Per rendere più semplice e chiara la comprensione ed evitare ogni ambiguità relativa ai termini utilizzati nei documenti, viene allegato il documento \Glossario, nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni.
 
-Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice $\gamma$.
+Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice $\mathcal{G}$.
 }
 
 % Membri del gruppo:
